Update translation strings for "not-found" in multiple languages

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -194,7 +194,7 @@
             },
             "changelogs": {
                 "open" : "🚀 Neues im Changelog entdecken!",
-                "not-found": "😕 Hoppla, kein Changelog zu sehen!"
+                "not_founds": "😕 Hoppla, kein Changelog zu sehen!"
             }
         }
     },
