--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -194,7 +194,7 @@
             },
             "changelogs": {
                 "open" : "🚀 チェンジログを覗いてみて！",
-                "not-found": "😕 あれ、チェンジログが見当たらない！"
+                "not_founds": "😕 あれ、チェンジログが見当たらない！"
             }
         }
     },
