--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -194,7 +194,7 @@
             },
             "changelogs": {
                 "open" : "🚀 探索更新日誌！",
-                "not-found": "😕 噢，找不到更新日誌！"
+                "not_founds": "😕 噢，找不到更新日誌！"
             }
         }
     },
