--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -194,7 +194,7 @@
             },
             "changelogs": {
                 "open" : "🚀 探索更新日志！",
-                "not-found": "😕 哎呀，找不到更新日志！"
+                "not_founds": "😕 哎呀，找不到更新日志！"
             }
         }
     },
