[feature-107] lot of changes but mainly, maps now use a cache and load almost instantly after first load

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -763,13 +763,13 @@
             "rb": "R&B",
             "holiday": "Urlaub",
             "vocaloid": "Vokaloid",
-            "jrock": "J-Rock",
+            "j-rock": "J-Rock",
             "trance": "Trance",
             "drumbass": "Basstrommel",
             "comedy": "Komödie",
             "instrumental": "Instrumental",
             "hardcore": "Hardcore",
-            "kpop": "K-Pop",
+            "k-pop": "K-Pop",
             "indie": "Indie",
             "techno": "Techno",
             "house": "House",
@@ -780,7 +780,7 @@
             "metal": "Metal",
             "anime": "Anime",
             "hiphop": "HipHop",
-            "jpop": "J-Pop",
+            "j-pop": "J-Pop",
             "rock": "Rock",
             "pop": "Pop",
             "electronic": "Elektronisch",
