--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -763,13 +763,13 @@
             "rb": "r&b",
             "holiday": "休日",
             "vocaloid": "ボーカロイド",
-            "jrock": "j-rock",
+            "j-rock": "j-rock",
             "trance": "トランス",
             "drumbass": "ドラムンベース",
             "comedy": "コメディ",
             "instrumental": "器楽",
             "hardcore": "ハードコア",
-            "kpop": "k-pop",
+            "k-pop": "k-pop",
             "indie": "インディー",
             "techno": "テクノ",
             "house": "家",
@@ -780,7 +780,7 @@
             "metal": "メタル",
             "anime": "アニメ",
             "hiphop": "ヒップポップ",
-            "jpop": "j-pop",
+            "j-pop": "j-pop",
             "rock": "ロック",
             "pop": "ポップ",
             "electronic": "エレクトロニック",
