--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -762,13 +762,13 @@
             "rb": "ар-н-би",
             "holiday": "праздник",
             "vocaloid": "вокалоиды",
-            "jrock": "джей-рок",
+            "j-rock": "джей-рок",
             "trance": "транс",
             "drumbass": "драм-н-бейс",
             "comedy": "комедия",
             "instrumental": "инструментальные",
             "hardcore": "хардкор",
-            "kpop": "кей-поп",
+            "k-pop": "кей-поп",
             "indie": "инди",
             "techno": "техно",
             "house": "хаус",
@@ -779,7 +779,7 @@
             "metal": "метал",
             "anime": "аниме",
             "hiphop": "хипхоп",
-            "jpop": "джей-поп",
+            "j-pop": "джей-поп",
             "rock": "прк",
             "pop": "поп",
             "electronic": "электроника",
