--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -763,13 +763,13 @@
             "rb": "R&B",
             "holiday": "Holiday",
             "vocaloid": "Vocaloid",
-            "jrock": "J-rock",
+            "j-rock": "J-rock",
             "trance": "Trance",
             "drumbass": "Drum & Bass",
             "comedy": "Comedy",
             "instrumental": "Instrumental",
             "hardcore": "Hardcore",
-            "kpop": "K-pop",
+            "k-pop": "K-pop",
             "indie": "Indie",
             "techno": "Techno",
             "house": "House",
@@ -780,7 +780,7 @@
             "metal": "Metal",
             "anime": "Anime",
             "hiphop": "Hiphop",
-            "jpop": "J-pop",
+            "j-pop": "J-pop",
             "rock": "Rock",
             "pop": "Pop",
             "electronic": "Electronic",
