--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -763,13 +763,13 @@
             "rb": "r&b",
             "holiday": "vacance",
             "vocaloid": "vocaloid",
-            "jrock": "j-rock",
+            "j-rock": "j-rock",
             "trance": "trance",
             "drumbass": "drum & bass",
             "comedy": "comédie",
             "instrumental": "instrumental",
             "hardcore": "hardcore",
-            "kpop": "k-pop",
+            "k-pop": "k-pop",
             "indie": "indé",
             "techno": "techno",
             "house": "house",
@@ -780,7 +780,7 @@
             "metal": "metal",
             "anime": "anime",
             "hiphop": "hiphop",
-            "jpop": "j-pop",
+            "j-pop": "j-pop",
             "rock": "rock",
             "pop": "pop",
             "electronic": "électronique",
