--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -696,8 +696,7 @@
             "body": {
                 "must-be-installed-once": "你必须至少从 Oculus 商店安装过一次 BeatSaber，否则 BeatSaber 可能会在启动后自动关闭。",
                 "need-backup": "要启动该版本，位于你的 Oculus 库中的 BeatSaber 安装文件夹将被重命名。",
-                "can-restore-later": "如果需要，你可以通过前往 BSManager 的原始 Oculus 版本选项并点击'恢复文件夹'来恢复它。",
-                "tips-launch-oculus": "提示：只要原始版本没有被恢复，你就可以直接从 Oculus 启动该版本。"
+                "can-restore-later": "如果需要，你可以通过前往 BSManager 的原始 Oculus 版本选项并点击'恢复文件夹'来恢复它。"
             },
             "not-remind-me": "不再提醒我",
             "understood": "明白了"
