--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -94,8 +94,7 @@
                 "edit": "Редактировать",
                 "uninstall": "Удалить",
                 "create-shortcut": "Создать ярлык",
-                "shared-folders": "Общие папки",
-                "restore-oculus-folder": "Восстановить папку"
+                "shared-folders": "Общие папки"
             }
         },
         "available-versions": {
@@ -695,8 +694,7 @@
             "title": "Внимание",
             "body": {
                 "must-be-installed-once": "Вы должны были установить Beat Saber хотя бы один раз из Oculus Store, иначе Beat Saber может автоматически закрыться после запуска.",
-                "need-backup": "Для запуска этой версии папка установки Beat Saber в вашей библиотеке Oculus будет переименована.",
-                "can-restore-later": "При необходимости вы можете восстановить её через BSManager, перейдя в опции оригинальной версии Oculus и нажав на 'Восстановить папку'"
+                "will-backup": "Для запуска этой версии исходная папка установки Beat Saber, находящаяся в вашей библиотеке Oculus, будет переименована и автоматически восстановлена при выходе из Beat Saber."
             },
             "not-remind-me": "Больше не напоминать",
             "understood": "Понял"
