--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -94,8 +94,7 @@
                 "edit": "編輯",
                 "uninstall": "移除",
                 "create-shortcut": "創建捷徑",
-                "shared-folders": "Shared Folders",
-                "restore-oculus-folder": "Restore the folder"
+                "shared-folders": "Shared Folders"
             }
         },
         "available-versions": {
@@ -695,8 +694,7 @@
             "title": "警告",
             "body": {
                 "must-be-installed-once": "你必須至少從 Oculus 商店安裝過一次 BeatSaber，否則 BeatSaber 可能會在啟動後自動關閉。",
-                "need-backup": "要啟動該版本，位於你的 Oculus 庫中的 BeatSaber 安裝文件夾將被重命名。",
-                "can-restore-later": "如果需要，你可以通過前往 BSManager 的原始 Oculus 版本選項並點擊'恢復文件夾'來恢復它。"
+                "will-backup": "為了啟動這個版本，位於您的Oculus庫中的Beat Saber的原始安裝文件夾將被重新命名，並且在Beat Saber關閉時會自動恢復。"
             },
             "not-remind-me": "不再提醒我",
             "understood": "明白了"
