--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -94,8 +94,7 @@
                 "edit": "Bearbeiten",
                 "uninstall": "Entfernen",
                 "create-shortcut": "Verknüpfung erstellen",
-                "shared-folders": "Geteilte Ordner",
-                "restore-oculus-folder": "Ordner wiederherstellen"
+                "shared-folders": "Geteilte Ordner"
             }
         },
         "available-versions": {
@@ -695,8 +694,7 @@
             "title": "Achtung",
             "body": {
                 "must-be-installed-once": "Sie müssen Beat Saber mindestens einmal aus dem Oculus Store installiert haben, sonst könnte sich Beat Saber nach dem Start automatisch schließen.",
-                "need-backup": "Um diese Version zu starten, wird der Installationsordner von Beat Saber in Ihrer Oculus-Bibliothek umbenannt.",
-                "can-restore-later": "Bei Bedarf können Sie ihn vom BSManager aus wiederherstellen, indem Sie zu den Optionen der originalen Oculus-Version gehen und auf 'Ordner wiederherstellen' klicken"
+                "will-backup": "Um diese Version zu starten, wird der ursprüngliche Installationsordner von Beat Saber in Ihrer Oculus-Bibliothek umbenannt und beim Schließen von Beat Saber automatisch wiederhergestellt."
             },
             "not-remind-me": "Nicht mehr erinnern",
             "understood": "Verstanden"
