--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -94,8 +94,7 @@
                 "edit": "Modifier",
                 "uninstall": "Désinstaller",
                 "create-shortcut": "Créer un raccourci",
-                "shared-folders": "Dossiers partagés",
-                "restore-oculus-folder": "Restaurer le dossier"
+                "shared-folders": "Dossiers partagés"
             }
         },
         "available-versions": {
@@ -695,8 +694,7 @@
             "title": "Attention",
             "body": {
                 "must-be-installed-once": "Vous devez avoir installé au moins une fois Beat Saber depuis l'Oculus Store, sinon Beat Saber pourrait se fermer automatiquement après son lancement.",
-                "need-backup": "Pour lancer cette version, le dossier d'installation de Beat Saber se trouvant dans votre librairie Oculus va être renommé.",
-                "can-restore-later": "Au besoin, vous pourrez le restaurer depuis BSManager en vous rendant dans les options de la version originale Oculus et en cliquant sur \"Restaurer le dossier\""
+                "will-backup": "Afin de lancer cette version, le dossier d'installation original de Beat Saber se trouvant dans votre bibliothèque Oculus va être renommé et sera automatiquement restauré à l'arrêt de Beat Saber."
             },
             "not-remind-me": "Ne plus me rappeler",
             "understood": "J'ai compris"
