--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -94,8 +94,7 @@
                 "edit": "編集",
                 "uninstall": "アンインストール",
                 "create-shortcut": "ショートカットを作成",
-                "shared-folders": "共有フォルダー",
-                "restore-oculus-folder": "フォルダーの復元"
+                "shared-folders": "共有フォルダー"
             }
         },
         "available-versions": {
@@ -695,8 +694,7 @@
             "title": "注意",
             "body": {
                 "must-be-installed-once": "少なくとも一度はOculus StoreからBeat Saberをインストールしている必要があります。そうしないとBeat Saberは起動後に自動的に終了する可能性があります。",
-                "need-backup": "このバージョンを起動するには、OculusライブラリにあるBeat Saberインストールフォルダの名前を変更します。",
-                "can-restore-later": "必要であれば、BSManagerから元のOculusバージョンのオプションに行き、'フォルダを復元'をクリックして復元することができます。"
+                "will-backup": "このバージョンを起動するために、OculusライブラリにあるBeat Saberの元のインストールフォルダは名前が変更され、Beat Saberの終了時に自動的に復元されます。"
             },
             "not-remind-me": "二度と表示しないでください",
             "understood": "分かった"
