--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -238,9 +238,6 @@
                     }
                 },
                 "errors": {
-                    "titles": {
-                        "dotnet-required": "Требуется .NET 6"
-                    },
                     "msg": {
                         "401": "Похоже Steam не хочет, чтобы мы скачали Beat Saber 😢",
                         "404": "Нет связи с серверами Steam.",
@@ -263,11 +260,7 @@
                         "LicenceError": "Не удалось проверить наличие лицензии.",
                         "RateLimitExceeded": "Слишком много попыток, вернитесь позже и попробуйте снова.",
                         "TokenRejected": "Ваш токен для входа был отклонен 😕 Пожалуйста, попробуйте снова.",
-                        "AccessDenied": "Доступ к Steam был отклонен.",
-                        "dotnet-required": "Среда запуска .NET 6 должна быть установлена, чтобы скачать Beat Saber. Скачайте её с помощью кнопки ниже."
-                    },
-                    "actions": {
-                        "download-dotnet": "Скачать .NET 6"
+                        "AccessDenied": "Доступ к Steam был отклонен."
                     }
                 }
             },
