--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -193,7 +193,7 @@
             },
             "changelogs": {
                 "open" : "🚀 Jetez un œil au Changelog !",
-                "not_founds": "😕 Oups, Changelog introuvable !"
+                "not-founds": "😕 Oups, Changelog introuvable !"
             }
         }
     },
