--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -193,7 +193,7 @@
             },
             "changelogs": {
                 "open" : "🚀 チェンジログを覗いてみて！",
-                "not_founds": "😕 あれ、チェンジログが見当たらない！"
+                "not-founds": "😕 あれ、チェンジログが見当たらない！"
             }
         }
     },
