--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -193,7 +193,7 @@
             },
             "changelogs": {
                 "open" : "🚀 探索更新日志！",
-                "not_founds": "😕 哎呀，找不到更新日志！"
+                "not-founds": "😕 哎呀，找不到更新日志！"
             }
         }
     },
