--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -193,7 +193,7 @@
             },
             "changelogs": {
                 "open" : "🚀 Изучаем Changelog!",
-                "not_founds": "😕 Ой, Changelog нигде не видно!"
+                "not-founds": "😕 Ой, Changelog нигде не видно!"
             }
         }
     },
