--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -193,7 +193,7 @@
             },
             "changelogs": {
                 "open" : "🚀 探索更新日誌！",
-                "not_founds": "😕 噢，找不到更新日誌！"
+                "not-founds": "😕 噢，找不到更新日誌！"
             }
         }
     },
