add japanese dateformat

--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -999,8 +999,8 @@
         }
     },
     "dateformat": {
-        "dayNames": ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-        "monthNames": ["Jan", "Feb", "Mar", "Apr", "May", "June", "Jul", "Aug", "Sept", "Oct", "Nov", "Dec", "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
-        "timeNames": ["a", "p", "am", "pm", "A", "P", "AM", "PM"]
+        "dayNames": ["日", "月", "火", "水", "木", "金", "土", "日曜日", "月曜日", "火曜日", "水曜日", "木曜日", "金曜日", "土曜日"],
+        "monthNames": ["1月", "2月", "3月", "4月", "5月", "6月", "7月", "8月", "9月", "10月", "11月", "12月", "1月", "2月", "3月", "4月", "5月", "6月", "7月", "8月", "9月", "10月", "11月", "12月"],
+        "timeNames": ["午前", "午後", "午前", "午後", "午前", "午後", "午前", "午後"]
     }
 }
